k8/istio/dotnet-iis-app-vm-github-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: route-github-egress
  namespace: demo-vm-ossm
spec:
  gateways:
  - istio-egressgateway
  - mesh
  hosts:
  - github.com
  - api.github.com
  - raw.githubusercontent.com
  tls:
  - match:
    - port: 443
      sniHosts:
      - github.com
    route:
    - destination:
        host: github.com
        port:
          number: 443
      weight: 100
  - match:
    - port: 443
      sniHosts:
      - raw.githubusercontent.com
    route:
    - destination:
        host: raw.githubusercontent.com
        port:
          number: 443
      weight: 100
